be_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: be
  template:
    metadata:
      labels:
        app: be
    spec:
      containers:
        - name: main
          image: ghcr.io/ondrejsika/counter
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 20m
              memory: 20Mi
            limits:
              cpu: 50m
              memory: 30Mi
