fe_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - counter.lab0.sikademo.com
      secretName: counter.lab0.sikademo.com-tls
  rules:
    - host: counter.lab0.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe
                port:
                  number: 80
